[gd_scene load_steps=14 format=3 uid="uid://cft44djjj2l7w"]

[ext_resource type="Script" path="res://Entities/entities_script/enemy_3_bullet.gd" id="1_locul"]
[ext_resource type="Texture2D" uid="uid://4usb0s7l7atq" path="res://Sprites/firetestrealwithdiag.png" id="2_74865"]
[ext_resource type="AudioStream" uid="uid://dihxul62p57h1" path="res://Music/SFX/04_Fire_explosion_04_medium.wav" id="3_wxuks"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ftbw"]

[sub_resource type="Animation" id="Animation_y4hl5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_c12bk"]
resource_name = "fr"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_fo0w3"]
resource_name = "fdr"

[sub_resource type="Animation" id="Animation_tis2w"]
resource_name = "fl"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_x8f4i"]
resource_name = "fd"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_lo8yb"]
resource_name = "fu"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 22, 21, 20, 19, 18]
}

[sub_resource type="Animation" id="Animation_p7mbw"]
resource_name = "ful"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_wnjol"]
resource_name = "fur"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_151jl"]
_data = {
"RESET": SubResource("Animation_y4hl5"),
"fd": SubResource("Animation_c12bk"),
"fdr": SubResource("Animation_fo0w3"),
"fl": SubResource("Animation_tis2w"),
"fr": SubResource("Animation_x8f4i"),
"fu": SubResource("Animation_lo8yb"),
"ful": SubResource("Animation_p7mbw"),
"fur": SubResource("Animation_wnjol")
}

[node name="enemy3_bullet" type="Area2D" groups=["enemy"]]
collision_layer = 32
collision_mask = 11
script = ExtResource("1_locul")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_74865")
hframes = 6
vframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6ftbw")

[node name="visible" type="VisibleOnScreenNotifier2D" parent="."]

[node name="bullet_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wxuks")
volume_db = 3.0

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_151jl")
}
autoplay = "fdr"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="visible" to="." method="_on_visible_screen_exited"]
